--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,4 @@
+<img src="signature.png" alt="Much" width="450" height="122" class="signature"/>
 <div class="navbar">
     <a href="/home" style="width: 70px">HOME</a>
     <a href="/about" style="width: 84px">ABOUT</a>
