--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,8 +3,29 @@
     margin: 0;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 body {
     background-color: #F5EBE0;
+}
+
+img.signature {
+    position: absolute;
+    top: 15px;
+    left: -70px;
+}
+
+.navbar {
+    width: 962px;
+    height: 56px;
+    position: absolute;
+    top: 54px;
+    left: 895px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .navbar a{
@@ -22,14 +43,4 @@ body {
 
 .navbar a.active {
     border-bottom: 2px solid black;
-}
-
-.navbar {
-    width: 962px;
-    height: 56px;
-    position: absolute;
-    top: 54px;
-    left: 895px;
-    display: flex;
-    justify-content: space-between;
 }
