--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <%- include('../partials/head') %>
+    <link rel="stylesheet" type="text/css" href="css/home.css" />
 </head>
 <body>
-    <%- include('../partials/navbar') %>
+    <div class="top-part">
+        <%- include('../partials/navbar') %>
+        <h1 class="home-h1">Hello, I’m Much.</h1>
+        <h1 class="home-h1">A programmer.</h1>
+    </div>
+
     <%- include('../partials/script') %>
 </body>
 </html>
