--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
-* {
-    padding: 0;
-    margin: 0;
-}
+@font-face {
+    font-family: 'superior-title';
+    src: url('SuperiorTitleTRIAL-Medium-BF642f8c4abbf2d.otf') format('opentype');
+  }
 
 img {
     max-width: 100%;
@@ -12,13 +12,18 @@ body {
     background-color: #F5EBE0;
 }
 
-img.signature {
+.top-part img.signature {
     position: absolute;
     top: 15px;
     left: -70px;
 }
 
-.navbar {
+.top-bar {
+    width: 100%;
+    height: 122px;
+}
+
+.nav-bar {
     width: 962px;
     height: 56px;
     position: absolute;
@@ -28,7 +33,7 @@ img.signature {
     justify-content: space-between;
 }
 
-.navbar a{
+.nav-bar a{
     text-decoration: none;
     color: #000;
     text-align: center;
@@ -41,6 +46,15 @@ img.signature {
     justify-content: center;
 }
 
-.navbar a.active {
+.nav-bar a.active {
     border-bottom: 2px solid black;
+}
+
+.top-part h1.home-h1 {
+    color: #222222;
+    font-size: 72px;
+    line-height: 100%;
+    font-family: 'superior-title', serif;
+    font-style: normal;
+    font-weight: 400;
 }
