--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,10 +1,12 @@
-<img src="signature.png" alt="Much" width="450" height="122" class="signature"/>
-<div class="navbar">
-    <a href="/home" style="width: 70px">HOME</a>
-    <a href="/about" style="width: 84px">ABOUT</a>
-    <a href="/portfolio" style="width: 123px">PORTFOLIO</a>
-    <a href="/education" style="width: 124px">EDUCATION</a>
-    <a href="/testimonials" style="width: 161px">TESTIMONIALS</a>
-    <a href="/blog" style="width: 68px">BLOG</a>
-    <a href="/contact" style="width: 110px">CONTACT</a>
+<div class="top-bar">
+    <img src="signature.png" alt="Much" width="450" height="122" class="signature"/>
+    <div class="nav-bar">
+        <a href="/home" style="width: 70px">HOME</a>
+        <a href="/about" style="width: 84px">ABOUT</a>
+        <a href="/portfolio" style="width: 123px">PORTFOLIO</a>
+        <a href="/education" style="width: 124px">EDUCATION</a>
+        <a href="/testimonials" style="width: 161px">TESTIMONIALS</a>
+        <a href="/blog" style="width: 68px">BLOG</a>
+        <a href="/contact" style="width: 110px">CONTACT</a>
+    </div>
 </div>
